--- a/brickleedit/src/gui/resources/resource.qrc
+++ b/brickleedit/src/gui/resources/resource.qrc
@@ -1,6 +1,9 @@
 <!DOCTYPE RCC><RCC version="1.0">
  <qresource>
-     <file>icons/newproject.png</file>
-	 <file>icons/openproject.png</file>
+     <file>icons/project.png</file>
+	 <file>icons/scene.png</file>
+	 <file>icons/new.png</file>
+	 <file>icons/open.png</file>
 </qresource>
  </RCC>
+
