--- a/brickleedit/src/gui/scenetree/scenetreedock.ui
+++ b/brickleedit/src/gui/scenetree/scenetreedock.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>466</width>
-    <height>580</height>
+    <width>500</width>
+    <height>751</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -41,7 +41,7 @@
        </property>
        <property name="maximumSize">
         <size>
-         <width>860</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
