--- a/brickleedit/src/gui/newscene/newscenedialog.ui
+++ b/brickleedit/src/gui/newscene/newscenedialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>New Scene</string>
+   <string>New</string>
   </property>
   <widget class="QPushButton" name="cancelButton">
    <property name="geometry">
@@ -32,12 +32,12 @@
      <x>20</x>
      <y>10</y>
      <width>701</width>
-     <height>60</height>
+     <height>62</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="1">
-     <widget class="QLineEdit" name="scenePath">
+     <widget class="QLineEdit" name="path">
       <property name="text">
        <string/>
       </property>
@@ -46,12 +46,12 @@
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Scene Name</string>
+       <string>Name</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="sceneName">
+     <widget class="QLineEdit" name="name">
       <property name="text">
        <string/>
       </property>
@@ -60,7 +60,7 @@
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Scene Path</string>
+       <string>Path</string>
       </property>
      </widget>
     </item>
@@ -88,8 +88,8 @@
   </widget>
  </widget>
  <tabstops>
-  <tabstop>sceneName</tabstop>
-  <tabstop>scenePath</tabstop>
+  <tabstop>name</tabstop>
+  <tabstop>path</tabstop>
   <tabstop>choosePath</tabstop>
   <tabstop>okButton</tabstop>
   <tabstop>cancelButton</tabstop>
