--- a/brickleedit/src/gui/propertygrid/propertytreedock.ui
+++ b/brickleedit/src/gui/propertygrid/propertytreedock.ui
@@ -32,6 +32,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="alternatingRowColors">
+       <bool>false</bool>
+      </property>
       <column>
        <property name="text">
         <string>Property</string>
@@ -40,6 +43,11 @@
       <column>
        <property name="text">
         <string>Value</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>...</string>
        </property>
       </column>
      </widget>
