--- a/brickleedit/src/gui/scenetree/scenetreedock.ui
+++ b/brickleedit/src/gui/scenetree/scenetreedock.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>376</width>
+    <width>517</width>
     <height>751</height>
    </rect>
   </property>
@@ -222,7 +222,7 @@
           </column>
           <column>
            <property name="text">
-            <string>Visible</string>
+            <string>More</string>
            </property>
           </column>
          </widget>
