--- a/brickleedit/src/gui/scenetree/scenetreedock.ui
+++ b/brickleedit/src/gui/scenetree/scenetreedock.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>517</width>
+    <width>457</width>
     <height>751</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>457</width>
+    <height>225</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Scene Tree</string>
@@ -24,7 +30,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="scene">
        <property name="sizePolicy">
