--- a/brickleedit/src/gui/propertygrid/propertytreedock.ui
+++ b/brickleedit/src/gui/propertygrid/propertytreedock.ui
@@ -35,6 +35,18 @@
       <property name="alternatingRowColors">
        <bool>false</bool>
       </property>
+      <attribute name="headerCascadingSectionResizes">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="headerDefaultSectionSize">
+       <number>180</number>
+      </attribute>
+      <attribute name="headerHighlightSections">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="headerShowSortIndicator" stdset="0">
+       <bool>false</bool>
+      </attribute>
       <column>
        <property name="text">
         <string>Property</string>
