multi resource files

--- a/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
+++ b/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
@@ -39,7 +39,7 @@
     <string>Cancel</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -65,13 +65,13 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>70</y>
+     <y>100</y>
      <width>721</width>
-     <height>431</height>
+     <height>401</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -166,6 +166,16 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QComboBox" name="resourceNameOpm">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>70</y>
+     <width>261</width>
+     <height>22</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <resources/>
