--- a/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
+++ b/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
@@ -6,39 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1040</width>
-    <height>575</height>
+    <width>1041</width>
+    <height>697</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="okButton">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>520</y>
-     <width>80</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>OK</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="cancelButton">
-   <property name="geometry">
-    <rect>
-     <x>940</x>
-     <y>520</y>
-     <width>80</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Cancel</string>
-   </property>
-  </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
@@ -52,14 +26,14 @@
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Animation</string>
+       <string>Name</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="animationName">
       <property name="enabled">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
      </widget>
     </item>
@@ -71,7 +45,7 @@
      <x>20</x>
      <y>100</y>
      <width>1001</width>
-     <height>401</height>
+     <height>531</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -79,12 +53,12 @@
      <widget class="QTreeWidget" name="treeWidgetTextures">
       <column>
        <property name="text">
-        <string>Type</string>
+        <string>Name</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Name</string>
+        <string>Frame</string>
        </property>
       </column>
      </widget>
@@ -148,7 +122,12 @@
       </property>
       <column>
        <property name="text">
-        <string>Frame #</string>
+        <string>Frame</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Texture Name</string>
        </property>
       </column>
       <column>
@@ -156,13 +135,16 @@
         <string>Texture Frame</string>
        </property>
       </column>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>no preview available</string>
-      </property>
+      <column>
+       <property name="text">
+        <string>Texture Path</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Resource File</string>
+       </property>
+      </column>
      </widget>
     </item>
    </layout>
@@ -172,10 +154,36 @@
     <rect>
      <x>20</x>
      <y>70</y>
-     <width>261</width>
+     <width>451</width>
      <height>22</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>650</y>
+     <width>195</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <item>
+     <widget class="QPushButton" name="okButton">
+      <property name="text">
+       <string>OK</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="cancelButton">
+      <property name="text">
+       <string>Cancel</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
