--- a/brickleedit/src/gui/textureframeeditor/textureframeeditor.ui
+++ b/brickleedit/src/gui/textureframeeditor/textureframeeditor.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>733</width>
-    <height>582</height>
+    <height>419</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,16 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>70</y>
-     <width>93</width>
+     <y>90</y>
+     <width>111</width>
      <height>28</height>
     </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
    </property>
    <property name="minimumSize">
     <size>
@@ -37,23 +43,48 @@
     <rect>
      <x>20</x>
      <y>60</y>
-     <width>231</width>
-     <height>81</height>
+     <width>201</width>
+     <height>79</height>
     </rect>
    </property>
    <property name="title">
     <string>Add automatic X/Y Frames</string>
    </property>
-   <widget class="QWidget" name="layoutWidget1">
+   <widget class="QPushButton" name="addFrames">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>35</y>
+      <width>80</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>80</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="text">
+     <string>Add Frames</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
-      <width>204</width>
-      <height>59</height>
+      <y>23</y>
+      <width>91</width>
+      <height>48</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout_3">
+    <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
@@ -65,19 +96,6 @@
       <widget class="QSpinBox" name="xFrames">
        <property name="value">
         <number>1</number>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QPushButton" name="addFrames">
-       <property name="minimumSize">
-        <size>
-         <width>80</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Add Frames</string>
        </property>
       </widget>
      </item>
@@ -102,7 +120,7 @@
    <property name="geometry">
     <rect>
      <x>550</x>
-     <y>530</y>
+     <y>380</y>
      <width>80</width>
      <height>26</height>
     </rect>
@@ -115,7 +133,7 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>530</y>
+     <y>380</y>
      <width>80</width>
      <height>26</height>
     </rect>
@@ -130,22 +148,47 @@
      <x>250</x>
      <y>60</y>
      <width>311</width>
-     <height>81</height>
+     <height>79</height>
     </rect>
    </property>
    <property name="title">
     <string>Add single Frame</string>
    </property>
-   <widget class="QWidget" name="layoutWidget2">
+   <widget class="QPushButton" name="addSingleFrame">
     <property name="geometry">
      <rect>
-      <x>11</x>
-      <y>20</y>
-      <width>291</width>
-      <height>59</height>
+      <x>200</x>
+      <y>40</y>
+      <width>80</width>
+      <height>21</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout_2">
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>80</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="text">
+     <string>Add Frame</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>23</y>
+      <width>161</width>
+      <height>48</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
@@ -189,19 +232,6 @@
        </property>
        <property name="value">
         <number>1</number>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="4">
-      <widget class="QPushButton" name="addSingleFrame">
-       <property name="minimumSize">
-        <size>
-         <width>80</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Add Frame</string>
        </property>
       </widget>
      </item>
@@ -339,7 +369,7 @@
      <x>21</x>
      <y>151</y>
      <width>701</width>
-     <height>371</height>
+     <height>211</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
