--- a/brickleedit/src/gui/textureframeeditor/textureframeeditor.ui
+++ b/brickleedit/src/gui/textureframeeditor/textureframeeditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>733</width>
-    <height>419</height>
+    <width>744</width>
+    <height>595</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -41,9 +41,9 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>10</x>
      <y>60</y>
-     <width>201</width>
+     <width>221</width>
      <height>79</height>
     </rect>
    </property>
@@ -53,8 +53,8 @@
    <widget class="QPushButton" name="addFrames">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>35</y>
+      <x>130</x>
+      <y>40</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -80,8 +80,8 @@
      <rect>
       <x>10</x>
       <y>23</y>
-      <width>91</width>
-      <height>48</height>
+      <width>104</width>
+      <height>53</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
@@ -116,32 +116,6 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QPushButton" name="okButton">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>380</y>
-     <width>80</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>OK</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="cancelButton">
-   <property name="geometry">
-    <rect>
-     <x>640</x>
-     <y>380</y>
-     <width>80</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Cancel</string>
-   </property>
-  </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
@@ -157,7 +131,7 @@
    <widget class="QPushButton" name="addSingleFrame">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>190</x>
       <y>40</y>
       <width>80</width>
       <height>21</height>
@@ -184,8 +158,8 @@
      <rect>
       <x>10</x>
       <y>23</y>
-      <width>161</width>
-      <height>48</height>
+      <width>167</width>
+      <height>53</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -290,7 +264,7 @@
      <x>20</x>
      <y>20</y>
      <width>701</width>
-     <height>24</height>
+     <height>30</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -369,7 +343,7 @@
      <x>21</x>
      <y>151</y>
      <width>701</width>
-     <height>211</height>
+     <height>361</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -428,6 +402,32 @@
        </widget>
       </item>
      </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>540</y>
+     <width>195</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <item>
+     <widget class="QPushButton" name="okButton">
+      <property name="text">
+       <string>OK</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="cancelButton">
+      <property name="text">
+       <string>Cancel</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
