--- a/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
+++ b/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Animation Frame Editor</string>
   </property>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
@@ -26,7 +26,7 @@
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Name</string>
+       <string>Animation Name</string>
       </property>
      </widget>
     </item>
