--- a/brickleedit/src/gui/resources/resource.qrc
+++ b/brickleedit/src/gui/resources/resource.qrc
@@ -1,9 +1,10 @@
-<!DOCTYPE RCC><RCC version="1.0">
- <qresource>
-     <file>icons/project.png</file>
-	 <file>icons/scene.png</file>
-	 <file>icons/new.png</file>
-	 <file>icons/open.png</file>
-</qresource>
- </RCC>
-
+<RCC>
+    <qresource prefix="/">
+        <file>icons/project.png</file>
+        <file>icons/scene.png</file>
+        <file>icons/new.png</file>
+        <file>icons/open.png</file>
+        <file>icons/newAnimation.png</file>
+        <file>icons/newTexture.png</file>
+    </qresource>
+</RCC>
