--- a/brickleedit/src/gui/scenetree/scenetreedock.ui
+++ b/brickleedit/src/gui/scenetree/scenetreedock.ui
@@ -182,17 +182,17 @@
              </sizepolicy>
             </property>
             <property name="toolTip">
-             <string>New Resource Node</string>
+             <string>New Texture Node</string>
             </property>
             <property name="styleSheet">
              <string notr="true">image: url(:/icons/newproject.png);</string>
             </property>
             <property name="text">
-             <string>Texture</string>
+             <string/>
             </property>
             <property name="icon">
              <iconset resource="../resources/resource.qrc">
-              <normaloff>:/icons/new.png</normaloff>:/icons/new.png</iconset>
+              <normaloff>:/icons/newTexture.png</normaloff>:/icons/newTexture.png</iconset>
             </property>
             <property name="autoDefault">
              <bool>false</bool>
@@ -201,7 +201,7 @@
              <bool>false</bool>
             </property>
             <property name="flat">
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -213,12 +213,18 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="toolTip">
+             <string>New Animation Node</string>
+            </property>
             <property name="text">
-             <string>Animation</string>
+             <string/>
             </property>
             <property name="icon">
              <iconset resource="../resources/resource.qrc">
-              <normaloff>:/icons/new.png</normaloff>:/icons/new.png</iconset>
+              <normaloff>:/icons/newAnimation.png</normaloff>:/icons/newAnimation.png</iconset>
+            </property>
+            <property name="flat">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
