--- a/brickleedit/src/gui/textureframeeditor/textureframeeditor.ui
+++ b/brickleedit/src/gui/textureframeeditor/textureframeeditor.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Edit Texture Frames</string>
+   <string>Texture Frame Editor</string>
   </property>
   <widget class="QPushButton" name="removeFrame">
    <property name="geometry">
@@ -405,7 +405,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>520</x>
