--- a/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
+++ b/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
@@ -76,8 +76,22 @@
           <height>16777215</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>Add frame</string>
+        </property>
         <property name="text">
-         <string>Add (+)</string>
+         <string>Add Frame</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normalon>:/icons/plus.png</normalon>
+         </iconset>
+        </property>
+        <property name="autoRepeat">
+         <bool>false</bool>
+        </property>
+        <property name="flat">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -89,10 +103,31 @@
           <height>16777215</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>Remove frame</string>
+        </property>
         <property name="text">
-         <string>Remove (-)</string>
+         <string>Remove</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normalon>:/icons/delete.png</normalon>
+         </iconset>
         </property>
        </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="moveUp">
@@ -102,8 +137,16 @@
           <height>16777215</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>Move frame up</string>
+        </property>
         <property name="text">
-         <string>Move Up</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normalon>:/icons/up.png</normalon>
+         </iconset>
         </property>
        </widget>
       </item>
@@ -115,8 +158,16 @@
           <height>16777215</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>Move frame down</string>
+        </property>
         <property name="text">
-         <string>Move Down</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normalon>:/icons/down.png</normalon>
+         </iconset>
         </property>
        </widget>
       </item>
