--- a/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
+++ b/brickleedit/src/gui/animationframeeditor/animationframeeditor.ui
@@ -262,6 +262,19 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>80</y>
+     <width>141</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Current Frames:</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
